# crm-ai-agent

./: .env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
api/: main.py
api/endpoints/: auth.py  conversations.py  courses.py  users.py
chatbot/: __init__.py
chatbot/agents/: crewai_agent.py
chatbot/chains/: conversation.py
chatbot/prompts/: base_prompt.py
db/migrations/: env.py
db/utils/: __init__.py  database.py
models/: __init__.py  conversation.py  conversation_message.py  course.py  user.py
services/ai/: course_recommender.py
services/crm/: crm_client.py
vector_db/: __init__.py  qdrant_client.py
vector_db/utils/: embeddings.py
